# lasur-ws

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: deploy.yml
api/: auth.py  config.py  main.py
api/models/: isochrones.py  modal_typo.py
api/service/: pois.py
api/views/: auth.py  isochrones.py  modal_typo.py
tests/: test_config.py
