[project]
name = "api"
version = "0.2.0"
requires-python = ">=3.11,<4.0"
dependencies = [
  "fastapi>=0.115.8",
  "uvicorn>=0.34.0",
  "pydantic-settings>=2.8.0",
  "redis>=6.4.0",
  "typo-modal @ git+https://github.com/EPFL-ENAC/lasur-mobility-toolkit.git@34fac081ab957a0d2d5d53488b9c4f908b7427b9",
  "isochrones @ git+https://github.com/EPFL-ENAC/isochrones.git@3b01f036767160641548533936ede3d15527d14b",
]
description = "LASUR Web Services"
authors = [{ name = "Yannick Marcon", email = "yannick.marcon@epfl.ch" }]
license = "GPLv3"
readme = "README.md"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
